--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Varta:wght@300..700&display=swap');
+
+/*NAVIGÁCIÓ*/
 .App {
   text-align: center;
 }
@@ -32,22 +35,40 @@
   display: none;
 }
 
+/*BEJELENTKEZÉS*/
+
 
 .bejelentkezes{
   width: 470px;
   height: 500px;
   margin: auto;
-  background-color: #FDDAF0;
+  color: #1A261A;
+  font-family: 'Varta', sans-serif;
 }
 
 .bejelentkezes button{
   width: 270px;
   height: 70px;
   border-radius: 10px;
-
+  background-color: #87414D;
+  color: white;
+  border: 0px;
 }
 
 .bejelentkezes input{
   width: 370px;
   height: 50px;
+  box-shadow: 0px 4px 4px #87414D;
+  color: #87414D;
+  background-color: white;
+  font-size: 20px;
+  border: 0px;
 }
+
+.bejelentkezes label{
+  font-size: 20px;
+}
+
+.bejelentkezes input::placeholder{ color: #87414D; }
+
+.bejelentkezes input:focus{ border: 0px; }
